--- a/frontend/noteably/public/index.html
+++ b/frontend/noteably/public/index.html
@@ -2,42 +2,38 @@
 <html lang="en">
   <head>
     <meta charset="utf-8" />
-    <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
+    <!-- Set the favicon to the noteably_logo -->
+    <link rel="icon" href="%PUBLIC_URL%/ASSETS/noteably_logo.png" type="image/png" />
+    
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
-    <meta
-      name="description"
-      content="Web site created using create-react-app"
-    />
-    <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
-    <!--
-      manifest.json provides metadata used when your web app is installed on a
-      user's mobile device or desktop. See https://developers.google.com/web/fundamentals/web-app-manifest/
-    -->
-    <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
-    <!--
-      Notice the use of %PUBLIC_URL% in the tags above.
-      It will be replaced with the URL of the `public` folder during the build.
-      Only files inside the `public` folder can be referenced from the HTML.
+    <meta name="description" content="A productivity app built with React" />
 
-      Unlike "/favicon.ico" or "favicon.ico", "%PUBLIC_URL%/favicon.ico" will
-      work correctly both with client-side routing and a non-root public URL.
-      Learn how to configure a non-root public URL by running `npm run build`.
-    -->
-    <title>React App</title>
+    <!-- Add Apple touch icon -->
+    <link rel="apple-touch-icon" href="%PUBLIC_URL%/ASSETS/noteably_logo.png" />
+    
+    <!-- Link to manifest.json for PWA support -->
+    <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
+
+    <title>Noteably - Your Productivity Partner</title>
   </head>
   <body>
+    <!-- Background Styling -->
+    <style>
+      body {
+        background-image: url('%PUBLIC_URL%/ASSETS/polkadot.png');
+        background-size: cover;
+        background-repeat: no-repeat;
+        background-attachment: fixed;
+        margin: 0;
+        font-family: Arial, sans-serif;
+      }
+    </style>
+
+    <!-- Display a warning if JavaScript is disabled -->
     <noscript>You need to enable JavaScript to run this app.</noscript>
+
+    <!-- React App Root -->
     <div id="root"></div>
-    <!--
-      This HTML file is a template.
-      If you open it directly in the browser, you will see an empty page.
-
-      You can add webfonts, meta tags, or analytics to this file.
-      The build step will place the bundled scripts into the <body> tag.
-
-      To begin the development, run `npm start` or `yarn start`.
-      To create a production bundle, use `npm run build` or `yarn build`.
-    -->
   </body>
 </html>
